# MetaX

./: CHANGELOG.md  README.md  README_CN.md  pyproject.toml  requirements.txt
Docs/: Deploy.md  README.md  Update.md  Usage.md
metax/: __init__.py
metax/base/: __init__.py
metax/base/math/: __init__.py  advanced.py  basic.py
metax/util/: __init__.py
metax/util/datetime/: __init__.py
metax/util/file/: __init__.py
metax/util/string/: __init__.py  format.py  validate.py
tests/: test_math.py
