[build-system]
requires = ["setuptools==69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metax"
version = "0.1.3"
description = "MetaX 是一个功能丰富的Python工具库，提供数学运算、字符串处理、日期时间、文件操作等常用工具函数，帮助开发者提高开发效率。"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "ACANX", email = "acanx@qq.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools]
packages = ["metax"]